package Classes;

//define os dois tipos que uma transação financeira pode ter
public enum TipoTransacao {
	RECEITA, 
	DESPESA
}
